--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -436,7 +436,7 @@
 	#container {
 			width: 850px;
 			height: 600px;
-			background-color: #c00;
+			background-color: orange;
 			margin:0 auto;
 			overflow: hidden;
 	}
