Changing picshow to myslides

--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -337,7 +337,7 @@
 		margin: 0 auto;
 		border: dotted orange 3px;
 	}
-	.picShow {
+	.mySlides {
 		width: 50%;
 		display: block;
 		margin: 0 auto;
