--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,443 @@
-/*reused*/
-#wrapper{
-	width:960px;
-	background-repeat: no-repeat;
-  background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
-	margin-left: auto;
-	margin-right: auto;
-}
-#fluid{
-	width: 100%;
-	background-repeat: no-repeat;
-  background: linear-gradient(#FF78FF 0,#0078FF 100%) fixed;
-	margin-left: auto;
-	margin-right: auto;
-}
-/*reused*/
-nav ul {
-	clear: both;
-	list-style-type: none;
-	margin: 0 auto;
-	padding: 0;
-	overflow: hidden;
-	text-align: center;
-}
-nav ul li{
-	display: inline;
+@media screen and (max-device-width: 480px) and (orientation: portrait) {
+	p, h1, h2, h3, td, div, th, ul, tr, table{
+		margin: 1rem;
+	}
+	h1{
+		font-size: 2rem;
+	}
+	h2{
+		font-size: 1.8rem;
+	}
+	p, h3{
+		font-size: 1.7rem;
+	}
+	h1, h2, h3, th{
+		font-weight: bold;
+	}
+	li{
+		list-style-type: square;
+		margin: 1rem;
+		font-size: 1.6rem;
+	}
+	header{
+		position: relative;
+	}
+	#wrapper{
+		width: 100%;
+		background-repeat: no-repeat;
+		background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	th, td {
+		font-size: 1.6rem;
+		padding: .5rem;
+	}
+	#dottedBox{
+		position: relative;
+		border:dashed 1px black;
+		margin-bottom: 1rem;
+		margin-top: 1rem;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 0.5rem;
+		width: 95%;
+	}
+	.defaultDiv{
+		position: relative;
+		margin: 1rem;
+		padding: 1rem;
+		background-color: rgba(240, 0, 0, 0.3);
+	}
+	nav {
+		padding: 1rem;
+		color: white;
+	}
+	nav ul {
+		clear: both;
+		list-style-type: none;
+		margin: 0 auto;
+		padding: 0;
+		overflow: hidden;
+		text-align: center;
+	}
+	.dropdownLinks {
+		display: block;
+		position: relative;
+		z-index: 1;
+		width: 100%;
+	}
+	nav ul li {
+		list-style-type: none;
+	}
+	.dropdownLinks a{
+		margin-top: 1rem;
+		display: block;
+		text-decoration: none;
+		background-color: orange;
+		color: white;
+		text-align: center;
+		padding: 0.5em;
+		width: 100%;
+	}
+	.dropdownLinks a:hover{
+		border-radius: 0.25em;
+		background-color: red;
+	}
+	.show {
+		display: block;
+	}
 	
+	#resume {
+		font-family: 'lucida sans typewriter', 'courier new', monospace;
+		position: relative;
+		text-align: center;
+		clear: both;
+	}
+	.heavySharp{
+		text-align: center;
+		font-family: 'Patua One', 'century gothic', cursive;
+		position: relative;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.official{
+		font-family: 'Special Elite', 'courier new', monospace;
+		font-size: 3rem;
+		text-align: center;
+	}
+	table{
+		margin: 0 auto;
+	}
+	.block{
+		position: relative;
+		background-color: #007849;
+		color: white;
+		padding: 2em;
+		width: 100%;
+		top: 1000px;
+	}
+	.block li {
+		display: inline;
+	}
 }
-nav ul li a{
-	margin-top: 1rem;
-	display: inline-block;
-	text-decoration: none;
-	background-color: orange;
-	color: white;
-	text-align: center;
-	padding: 0.5em;
-}
-nav ul li a:hover{
-	border-radius: 0.25em;
-	background-color: red;
-}
-#resume {
-	font-family: 'lucida sans typewriter', 'courier new', monospace;
-	position: relative;
-	text-align: center;
-	clear: both;
-}
-.heavySharp{
-	text-align: center;
-	font-family: 'Patua One', 'century gothic', cursive;
-	position: relative;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-#dottedBox{
-	position: relative;
-	border:dashed 1px grey;
-	margin-bottom: 1rem;
-	margin-top: 1rem;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 1rem;
-	width: 95%;
-}
-.defaultDiv{
-	position: relative;
-	margin: 1rem;
-}
-/*reused*/	
-.official{
-	font-family: 'Special Elite', 'courier new', monospace;
-	font-size: 3rem;
-	text-align: center;
-}
-/*reused*/
-.handwriting{
+@media screen and (min-width: 480px) {
+	p, h1, h2, h3, td, div, th, ul, tr, table{
+		margin: 2rem;
+	}
+	h1{
+		font-size: 2rem;
+	}
+	h2{
+		font-size: 1.8rem;
+	}
+	h3{
+		font-size: 1.5rem;
+	}
+	h1, h2, h3, th{
+		font-weight: bold;
+	}
+	li{
+		list-style-type: square;
+		margin: 1rem;
+	}
+	#wrapper{
+		width:960px;
+		background-repeat: no-repeat;
+		background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.block{
+		position: fixed;
+		background-color: #007849;
+		color: white;
+		padding: 1em;
+		width: 10%;
+		margin-left: -10rem;
+	}
+	.block li {
+		margin-left: -1rem;
+	}
+	nav ul {
+		clear: both;
+		list-style-type: none;
+		margin: 0 auto;
+		padding: 0;
+		overflow: hidden;
+		text-align: center;
+	}
+	.dropdownLinks{
+		display: inline;
+	}
+	.dropdownLinks a{
+		margin-top: 1rem;
+		display: inline-block;
+		text-decoration: none;
+		background-color: orange;
+		color: white;
+		text-align: center;
+		padding: 0.5em;
+	}
+	.dropdownLinks a:hover{
+		border-radius: 0.25em;
+		background-color: red;
+	}
+	#resume {
+		font-family: 'lucida sans typewriter', 'courier new', monospace;
+		position: relative;
+		text-align: center;
+		clear: both;
+	}
+	.heavySharp{
+		text-align: center;
+		font-family: 'Patua One', 'century gothic', cursive;
+		position: relative;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	#dottedBox{
+		position: relative;
+		border:dashed 1px grey;
+		margin-bottom: 1rem;
+		margin-top: 1rem;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 1rem;
+		width: 95%;
+	}
+	.defaultDiv{
+		position: relative;
+		margin: 1rem;
+	}
+	.official{
+		font-family: 'Special Elite', 'courier new', monospace;
+		font-size: 3rem;
+		text-align: center;
+	}
+	table{
+		margin: 0 auto;
+	}
+	th, td {
+		padding: .5rem;
+	}
+
+	
+	* {box-sizing:border-box}
+
+/* Slideshow container */
+	.slideshow-container {
+		width: 90%;
+		position: relative;
+		margin: auto;
+	}
+
+/* Hide the images by default */
+	.mySlides {
+		display: none;
+	}
+
+/* Next & previous buttons */
+	.prev, .next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		margin-top: -22px;
+		padding: 16px;
+		color: white;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.6s ease;
+		border-radius: 0 3px 3px 0;
+		user-select: none;
+	}	
+
+/* Position the "next button" to the right */
+	.next {
+		right: 0;
+		border-radius: 3px 0 0 3px;
+	}
+
+/* On hover, add a black background color with a little bit see-through */
+	.prev:hover, .next:hover {
+		background-color: rgba(0,0,0,0.8);
+	}
+
+/* Caption text */
+	.text {
+		color: #f2f2f2;
+		font-size: 15px;
+		padding: 12px;
+		position: absolute;
+		width: 100%;
+		text-align: center;
+		background-color: black;
+	}
+
+/* Number text (1/3 etc) */
+	.numbertext {
+		color: #f2f2f2;
+		font-size: 12px;
+		padding: 8px 12px;
+		position: absolute;
+		top: 0;
+	}
+
+/* The dots/bullets/indicators */
+	.dot {
+		cursor: pointer;
+		height: 15px;
+		width: 15px;
+		margin: 0 2px;
+		background-color: #bbb;
+		border-radius: 50%;
+		display: inline-block;
+		transition: background-color 0.6s ease;
+	}	
+
+	.active, .dot:hover {
+		background-color: #717171;
+	}	
+
+/* Fading animation */
+	.fade {
+		-webkit-animation-name: fade;
+		-webkit-animation-duration: 1.5s;
+		animation-name: fade;
+		animation-duration: 1.5s;
+	}	
+
+	@-webkit-keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}
+
+	@keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}	
+	#fluid{
+		width: 100%;
+		background-repeat: no-repeat;
+		background: linear-gradient(#FF78FF 0,#0078FF 100%) fixed;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	#smallData{
+		border: solid 1px purple;
+		font-size: .75rem;
+		margin-top: 1rem;
+	}
+	.pic{
+		display: block;
+		padding: 2em;
+		margin: 0 auto;
+		border: dotted orange 3px;
+	}
+	.picShow {
+		width: 50%;
+		display: block;
+		margin: 0 auto;
+	}
+	.image-break{
+		clear: both;
+		margin-left: auto;
+		margin-right: auto;
+		width: 95%;
+		height: 20%;
+		padding: 0.2em;
+		background-color: purple;
+		border: solid cyan 5px;
+		margin: 1rem;
+	}	
+	.image-break-cap{
+		margin: 0;
+		color: orange;
+		font-size: 3em;
+		text-align: center;
+		padding-bottom:.5rem;
+	}	
+	#set-right{
+		float: right;
+		font-size: 1.5em;
+		font-family: 'goudy old style', 'arial black', sans-serif;
+		margin-top: -1.5rem;
+		margin-bottom: 2rem;
+	}
+	.movie{
+		float: none;
+		width: 90%;
+		height: 70%;
+		display: block;
+		margin: 0 auto;
+		padding: 2rem;
+	}
+	.idea{
+		clear: both;
+		margin-left: auto;
+		margin-right: auto;
+		color: brown;
+		background-color: white;
+		padding: 1em;
+		border-radius: 5em;
+		position: relative;
+	}
+	div#links ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		text-align: center;
+	}
+	div#links ul li{
+		float: left;
+		margin: 1em;
+		font-size: 1.2em;
+		position: relative;
+		left: 11%;
+	}
+	div#links ul li a{
+		display: block;
+		text-decoration: none;
+		background-color: violet;
+		color: white;
+		text-align: center;
+		padding: 0.5em;
+		border-radius: 1em;
+	}
+	div#links ul li a:hover{
+		border-radius: 0;
+		background-color: blue;
+	}
+	#thank-you{
+		font-size: 10em;
+		width: 100%;
+		text-align: center;
+		font-weight: 400;
+	}
+	.handwriting{
 	font-family: 'Gloria Hallelujah', 'courier new', cursive;
 	text-align: center;
 	color: navy;
 	font-size: 1.2rem;
 	padding: .7rem;
 	margin: 1rem;
-}
-/*reused*/
-#smallData{
-	border: solid 1px purple;
-	font-size: .75rem;
-	margin-top: 1rem;
-}
-table{
-	margin: 0 auto;
-}
-/*reused*/
-.block{
-	position: fixed;
-	background-color: #007849;
-	color: white;
-	padding: 1em;
-	width: 7%;
-	margin-left: -10rem;
-}
-.block li {
-	margin-left: -1rem;
-}
-.pic{
-	display: block;
-	padding: 2em;
-	margin: 0 auto;
-	border: dotted orange 3px;
-}
-.image-break{
-	clear: both;
-	margin-left: auto;
-	margin-right: auto;
-	width: 95%;
-	height: 20%;
-	padding: 0.2em;
-	background-color: purple;
-	border: solid cyan 5px;
-	margin: 1rem;
-}
-.image-break-cap{
-	margin: 0;
-	color: orange;
-	font-size: 3em;
-	text-align: center;
-	padding-bottom:.5rem;
-}
-#set-right{
-	float: right;
-	font-size: 1.5em;
-	font-family: 'goudy old style', 'arial black', sans-serif;
-	margin-top: -1.5rem;
-	margin-bottom: 2rem;
-}
-.movie{
-	float: none;
-	width: 90%;
-	height: 70%;
-	display: block;
-	margin: 0 auto;
-	padding: 2rem;
-}
-.idea{
-	clear: both;
-	margin-left: auto;
-	margin-right: auto;
-	color: brown;
-	background-color: white;
-	padding: 1em;
-	border-radius: 5em;
-	position: relative;
-}
-div#links ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	text-align: center;
-}
-div#links ul li{
-	float: left;
-	margin: 1em;
-	font-size: 1.2em;
-	position: relative;
-	left: 11%;
-}
-div#links ul li a{
-	display: block;
-	text-decoration: none;
-	background-color: violet;
-	color: white;
-	text-align: center;
-	padding: 0.5em;
-	border-radius: 1em;
-}
-div#links ul li a:hover{
-	border-radius: 0;
-	background-color: blue;
-}
-#thank-you{
-	font-size: 10em;
-	width: 100%;
-	text-align: center;
-	font-weight: 400;
+	}
+
+	#canvas {
+			width: 700px;
+			height: 500px;
+			background-color: #ccc;
+			margin: 30px auto;
+	}
+	#container {
+			width: 850px;
+			height: 600px;
+			background-color: silver;
+			margin:0 auto;
+			overflow: hidden;
+	}
 }
