--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@media screen and (max-device-width: 480px) and (orientation: portrait) {
   p, h1, h2, h3, td, div, th, ul, tr, table{
     margin: 1rem;
   }
@@ -121,7 +120,7 @@
   .block li {
     display: inline;
   }
-}
+
 @media screen and (min-width: 480px) {
   p, h1, h2, h3, td, div, th, ul, tr, table{
     margin: 2rem;
@@ -150,15 +149,15 @@
     margin-right: auto;
   }
   .block{
-    position: fixed;
+    position: relative;
     background-color: #007849;
     color: white;
     padding: 1em;
-    width: 10%;
-    margin-left: -10rem;
+    width: 100%;
+
   }
   .block li {
-    margin-left: -1rem;
+    display: inline;
   }
   nav ul {
     clear: both;
@@ -406,3 +405,16 @@
       overflow: hidden;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .block{
+    position: fixed;
+    background-color: #007849;
+    color: white;
+    padding: 1em;
+    width: 10%;
+    margin-left: -10rem;
+  }
+  .block li {
+    margin-left: -1rem;
+  }
