--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-  p, h1, h2, h3, td, div, th, ul, tr, table{
+  p, h1, h2, h3, td, div, ul, tr, table{
     margin: 1rem;
   }
   h1{
@@ -110,118 +110,54 @@
     margin: 0 auto;
   }
   .block{
-    position: relative;
+    position: absolute;
     background-color: #007849;
     color: white;
     padding: 2em;
     width: 100%;
-    top: 1000px;
+    bottom: 1000px;
   }
   .block li {
     display: inline;
   }
 
 @media screen and (min-width: 480px) {
-  p, h1, h2, h3, td, div, th, ul, tr, table{
+  body p, h1, h2, h3, td, div, th, ul, tr, table{
     margin: 2rem;
-  }
-  h1{
-    font-size: 2rem;
   }
   h2{
     font-size: 1.8rem;
   }
-  h3{
+  body h3{
     font-size: 1.5rem;
   }
-  h1, h2, h3, th{
-    font-weight: bold;
+  body li, th, td, p{
+    font-size: 1rem;
   }
-  li{
-    list-style-type: square;
-    margin: 1rem;
-  }
-  #wrapper{
+  body #wrapper{
     width:960px;
-    background-repeat: no-repeat;
-    background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
-    margin-left: auto;
-    margin-right: auto;
   }
-  .block{
+  body .block{
     position: relative;
-    background-color: #007849;
-    color: white;
-    padding: 1em;
-    width: 100%;
-
   }
-  .block li {
+  body .dropdownLinks{
     display: inline;
   }
-  nav ul {
-    clear: both;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
-    overflow: hidden;
-    text-align: center;
-  }
-  .dropdownLinks{
-    display: inline;
-  }
-  .dropdownLinks a{
-    margin-top: 1rem;
+  body .dropdownLinks a{
     display: inline-block;
-    text-decoration: none;
-    background-color: orange;
-    color: white;
-    text-align: center;
-    padding: 0.5em;
   }
-  .dropdownLinks a:hover{
-    border-radius: 0.25em;
-    background-color: red;
-  }
-  #resume {
-    font-family: 'lucida sans typewriter', 'courier new', monospace;
-    position: relative;
-    text-align: center;
-    clear: both;
-  }
-  .heavySharp{
-    text-align: center;
-    font-family: 'Patua One', 'century gothic', cursive;
-    position: relative;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #dottedBox{
-    position: relative;
+  body #dottedBox{
     border:dashed 1px grey;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
-    width: 95%;
   }
-  .defaultDiv{
-    position: relative;
-    margin: 1rem;
-  }
-  .official{
-    font-family: 'Special Elite', 'courier new', monospace;
-    font-size: 3rem;
-    text-align: center;
-  }
-  table{
-    margin: 0 auto;
+  body .defaultDiv{
+    padding: 0rem;
+    background-color: none;
   }
   th, td {
     padding: .5rem;
   }
+  
+  
   .slideshow-container {
     width: 90%;
     position: relative;
@@ -407,14 +343,11 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .block{
+  body .block{
     position: fixed;
-    background-color: #007849;
-    color: white;
-    padding: 1em;
     width: 10%;
     margin-left: -10rem;
   }
-  .block li {
+  body .block li {
     margin-left: -1rem;
   }
