filled in some attributes that should be null

--- a/css/style.css
+++ b/css/style.css
@@ -139,22 +139,27 @@
   }
   body .block{
     position: relative;
+    bottom: 0px;
   }
   body .dropdownLinks{
     display: inline;
   }
   body .dropdownLinks a{
-    display: inline-block;
+    display: inline;
+    padding: 2rem;
   }
   body #dottedBox{
     border:dashed 1px grey;
   }
   body .defaultDiv{
     padding: 0rem;
-    background-color: none;
+    background: none;
   }
   th, td {
     padding: .5rem;
+  }
+  table {
+    margin: 0 auto;
   }
   
   
@@ -347,6 +352,8 @@
     position: fixed;
     width: 10%;
     margin-left: -10rem;
+    top: 0px;
+    bottom: 0px;
   }
   body .block li {
     margin-left: -1rem;
