--- a/css/style.css
+++ b/css/style.css
@@ -130,15 +130,23 @@
   }
   .archie {
     background-image: url("../media/archie.JPG");
+    width: 100%;
+    height: 100%;
   }
   .doggy1 {
     background-image: url("../media/Pup.JPG");
+    width: 100%;
+    height: 100%;
   }
   .shadow {
     background-image: url("../media/shadow.JPG");
+    width: 100%;
+    height: 100%;
   }
   .doggy2 {
     background-image: url("../media/dog.JPG");
+    width: 100%;
+    height: 100%;
   }
   .sliderButton {
     display: inline-block;
