Filled out skeleton of projects page

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     background: linear-gradient(#FFAA00 0, #ffc859 100%) fixed;
 }
 #homeBody {
-    color: #AA11EE;
+    color: #830db8;
 }
 
 def-body {
