--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-#home {
-    // background-color: #FFAA00;
-    background-repeat: no-repeat;
-    background: linear-gradient(#FFAA00 0, #ffc859 100%) fixed;
-}
-#homeBody {
-    color: #830db8;
-}
 #piechart {
     float: right;
 }
@@ -15,6 +7,14 @@
 }
 .skillList {
     float: left;
+}
+.default {
+    // background-color: #FFAA00;
+    background-repeat: no-repeat;
+    background: linear-gradient(#FFAA00 0, #ffc859 100%) fixed;
+}
+.defaultBody {
+    color: #830db8;
 }
 
 def-body {
