Tried correcting pie chart float

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 #piechart {
     float: right;
+    max-width: 50%;
 }
 #linkListHolder {
     float: left;
+    max-width: 50%;
 }
 #collage {
     position: fixed;
