--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     float: right;
     max-width: 50%;
 }
+#welcom {
+    clear: both;
+}
 .collage {
     position: fixed;
     top: 0;
@@ -39,8 +42,21 @@
     max-width: 50%;
     float: left;
 }
+#p3 {
+    max-width: 50%;
+    float: right;
+}
 #pup {
-    max-width: 100%;
+    max-width: 50%;
+    float: left;
+}
+#ice {
+    max-width: 50%;
+    float: right;
+}
+#island {
+    max-width: 50%;
+    float: left;
 }
 .skillList {
     float: left;
